# random-quote-generator

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: branch.yaml  release.yaml
docs/: conf.py
random_quote_generator/: quotes.py
