[tool.poetry]
name = "random-quote-generator-by-eduuardoperez"
version = "0.1.0"
description = ""
authors = ["Eduardo Perez <eduardo.perez@ripio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
